--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ reqwest = { version = "0.12.11", features = ["json"] }
 serde = "1.0.217"
 serde_derive = "1.0.217"
 chrono = { version = "0.4.39", features = ["serde"] }
+jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
+rand = "0.8.5"
