--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
 rand = "0.8.5"
 sec1 = { version = "0.7.3", features = ["alloc", "pkcs8", "pem", "std"] }
 thiserror = "2.0.9"
+serde_json = "1.0.134"
+uuid = { version = "1.11.0", features = ["v4"] }
