--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "cbat-rs"
+name = "cbat"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+name = "cbat"
+src = "src/lib.rs"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
