docker swarm init

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          echo -n $CBAT_KEY_NAME | docker secret create CBAT_KEY_NAME -
-          echo -n $CBAT_KEY_SECRET | docker secret create CBAT_KEY_SECRET -
+          docker swarm init
+          echo $CBAT_KEY_NAME | docker secret create CBAT_KEY_NAME -
+          echo $CBAT_KEY_SECRET | docker secret create CBAT_KEY_SECRET -
           docker build --secret id=CBAT_KEY_NAME --secret id=CBAT_KEY_SECRET -t cbat:latest .
