--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -19,6 +19,6 @@ jobs:
       - name: Build Docker Image
         run: |
           docker swarm init
-          echo -n ${{ secrets.CBAT_KEY_NAME }} | docker secret create CBAT_KEY_NAME -
-          echo -n ${{ secrets.CBAT_KEY_SECRET }} | docker secret create CBAT_KEY_SECRET -
+          echo ${{ secrets.CBAT_KEY_NAME }} | docker secret create CBAT_KEY_NAME -
+          echo ${{ secrets.CBAT_KEY_SECRET }} | docker secret create CBAT_KEY_SECRET -
           docker build --secret id=CBAT_KEY_NAME --secret id=CBAT_KEY_SECRET -t cbat:latest .
