--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -17,8 +17,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Docker Image
+        env:
+          CBAT_KEY_NAME: ${{ secrets.CBAT_KEY_NAME }}
+          CBAT_KEY_SECRET: ${{ secrets.CBAT_KEY_SECRET }}
         run: |
           docker swarm init
-          echo ${{ secrets.CBAT_KEY_NAME }} | docker secret create CBAT_KEY_NAME -
-          echo ${{ secrets.CBAT_KEY_SECRET }} | docker secret create CBAT_KEY_SECRET -
+          echo "$CBAT_KEY_NAME" | docker secret create CBAT_KEY_NAME -
+          echo "$CBAT_KEY_SECRET" | docker secret create CBAT_KEY_SECRET -
           docker build --secret id=CBAT_KEY_NAME --secret id=CBAT_KEY_SECRET -t cbat:latest .
