--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -20,8 +20,10 @@ jobs:
         env:
           CBAT_KEY_NAME: ${{ secrets.CBAT_KEY_NAME }}
           CBAT_KEY_SECRET: ${{ secrets.CBAT_KEY_SECRET }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
           docker swarm init
           echo "$CBAT_KEY_NAME" | docker secret create CBAT_KEY_NAME -
           echo "$CBAT_KEY_SECRET" | docker secret create CBAT_KEY_SECRET -
           docker build --secret id=CBAT_KEY_NAME --secret id=CBAT_KEY_SECRET -t cbat:latest .
+          echo "$CARGO_REGISTRY_TOKEN" | cargo login -
