--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -20,11 +20,15 @@ jobs:
         env:
           CBAT_KEY_NAME: ${{ secrets.CBAT_KEY_NAME }}
           CBAT_KEY_SECRET: ${{ secrets.CBAT_KEY_SECRET }}
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
           docker swarm init
           echo "$CBAT_KEY_NAME" | docker secret create CBAT_KEY_NAME -
           echo "$CBAT_KEY_SECRET" | docker secret create CBAT_KEY_SECRET -
           docker build --secret id=CBAT_KEY_NAME --secret id=CBAT_KEY_SECRET -t cbat:latest .
+
+      - name: Publish Crate
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: |
           echo "$CARGO_REGISTRY_TOKEN" | cargo login -
           cargo publish
