--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -27,6 +27,7 @@ jobs:
           docker build --secret id=CBAT_KEY_NAME --secret id=CBAT_KEY_SECRET -t cbat:latest .
 
       - name: Publish Crate
+        id: publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
@@ -36,4 +37,4 @@ jobs:
 
       - name: OK
         run: echo "OK"
-        if: job.steps.bad.status == failure()
+        if: job.steps.publish.status == failure()
